fix(YALB-1594): fix spacing of callout to match callout component in design system

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
@@ -55,7 +55,7 @@
 
 /* Modal Callout */
 .modalCallout {
-    padding: 2rem 2rem 4rem;
+    padding: 2.5rem 2rem 2.5rem;
     background-color: hsl(210, 100%, 21%);
 }
 
